Added links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Welcome to Rhandzu App</h1>
-    <footer>Coded by Lungile Kunene</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/AcquziaCooper" target="_blank">
+        Lungile Kunene</a
+      >
+      and is
+      <a href="https://github.com/AcquziaCooper/RITA" target="_blank">
+        on GitHub</a
+      >
+      hosted
+      <a href="https://rhandzu.netlify.app/" target="_blank"> on Netlify</a>
+    </footer>
   </body>
 </html>
