--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Rhandzu App</title>
   </head>
   <body>
-    <h1>Welcome to Rhandzu App</h1>
+    <header>
+        <form action="">
+            <input type="search" placeholder="Enter a city" required />
+            <input type="submit" value="Search" />
+        </form>
+    </header>
+    <main>
+        <div></div>
+    <h1>Barberton</h1>
+    <p>
+        Monday 14:01 Sunny
+        <br />
+        Humidity: 57%, Wind: 13km/h
+    </p>
+    </div>
+     <div>☀️ 16℃</div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/AcquziaCooper" target="_blank">
