--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rochester&family=Sansita+Swashed:wght@300..900&family=Sawarabi+Mincho&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Rhandzu App</title>
   </head>
   <body>
-    <header>
+    <div class="weather-app">
+      <header>
         <form action="">
-            <input type="search" placeholder="Enter a city" required />
-            <input type="submit" value="Search" />
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
         </form>
-    </header>
-    <main>
-        <div></div>
-    <h1>Barberton</h1>
-    <p>
-        Monday 14:01 Sunny
-        <br />
-        Humidity: 57%, Wind: 13km/h
-    </p>
+      </header>
+      <main>
+        <div>
+          <h1>Barberton</h1>
+          <p>
+            Monday 14:01 Sunny
+            <br />
+            Humidity: 57%, Wind: 13km/h
+          </p>
+        </div>
+        <div>☀️ 16℃</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/AcquziaCooper" target="_blank">
+          Lungile Kunene</a
+        >
+        and is
+        <a href="https://github.com/AcquziaCooper/RITA" target="_blank">
+          on GitHub</a
+        >
+        hosted
+        <a href="https://rhandzu.netlify.app/" target="_blank"> on Netlify</a>
+      </footer>
     </div>
-     <div>☀️ 16℃</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/AcquziaCooper" target="_blank">
-        Lungile Kunene</a
-      >
-      and is
-      <a href="https://github.com/AcquziaCooper/RITA" target="_blank">
-        on GitHub</a
-      >
-      hosted
-      <a href="https://rhandzu.netlify.app/" target="_blank"> on Netlify</a>
-    </footer>
   </body>
 </html>
