--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="app-temp-container">
             <div class="app-icon">☀️</div>
-            <div class="app-temp-value">16</div>
+            <div class="app-temp-value" id="temperature">16</div>
             <div class="app-unit">℃</div>
           </div>
         </div>
