updated days and time

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
           <div>
             <h1 class="app-city" id="app-city">Barberton</h1>
             <p class="app-details">
-              Monday 14:01, Sunny
+              <span id="time"></span> <span id="description">Sunny</span>
               <br />
-              Humidity: <strong>57%</strong>, Wind: <strong>13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="app-temp-container">
@@ -42,6 +43,16 @@
             <div class="app-temp-value" id="temperature">16</div>
             <div class="app-unit">℃</div>
           </div>
+        </div>
+        <div class="days">
+          <ul>
+            <li>Tuesday 🌤️ <strong>11℃</strong>/ <strong>23℃</strong></li>
+            <li>Wednesday 🌦️ <strong>9℃</strong>/ <strong>20℃</strong></li>
+            <li>Thursday ⛈️ <strong>10℃</strong>/ <strong>17℃</strong></li>
+            <li>Friday 🌨️ <strong>10℃</strong>/ <strong>19℃</strong></li>
+            <li>Saturday 🌤️ <strong>13℃</strong>/ <strong>24℃</strong></li>
+            <li>Sunday ☀️ <strong>8℃</strong>/ <strong>27℃</strong></li>
+          </ul>
         </div>
       </main>
       <footer>
