--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </p>
           </div>
           <div class="app-temp-container">
-            <div class="app-icon">☀️</div>
-            <div class="app-temp-value" id="temperature">16</div>
+            <div id="icon"></div>
+            <div class="app-temp-value" id="temperature"></div>
             <div class="app-unit">℃</div>
           </div>
         </div>
