Injected forecast HTML from JavaScript

--- a/index.html
+++ b/index.html
@@ -44,15 +44,12 @@
             <div class="app-unit">℃</div>
           </div>
         </div>
-        <div class="days">
-          <ul>
-            <li>Tuesday 🌤️ <strong>11℃</strong>/ <strong>23℃</strong></li>
-            <li>Wednesday 🌦️ <strong>9℃</strong>/ <strong>20℃</strong></li>
-            <li>Thursday ⛈️ <strong>10℃</strong>/ <strong>17℃</strong></li>
-            <li>Friday 🌨️ <strong>10℃</strong>/ <strong>19℃</strong></li>
-            <li>Saturday 🌤️ <strong>13℃</strong>/ <strong>24℃</strong></li>
-            <li>Sunday ☀️ <strong>8℃</strong>/ <strong>27℃</strong></li>
-          </ul>
+        <div class="weather" id="forecast">
+          <div class="weather-days">
+            <div class="weather-date">Tuesday</div>
+            <div class="weather-icon">🌤️</div>
+            <div class="weather-unit"><strong>11℃</strong>/ 23℃</div>
+          </div>
         </div>
       </main>
       <footer>
